--- a/index.html
+++ b/index.html
@@ -195,6 +195,44 @@
                     </div>
                 </li>
 
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma27.jpg"></div>
+                                <div class="slide"><img src="./images/ma271.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 750.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 27 - Đã SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma28.jpg"></div>
+                                <div class="slide"><img src="./images/ma281.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 28 - Đã SPC ID - Hall 9</div>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </div>
