--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </li>
-                
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -210,6 +210,44 @@
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 28 - Đã SPC ID - Hall 9</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma29.jpg"></div>
+                                <div class="slide"><img src="./images/ma291.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.000.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 29 - Hội: Level 21 - MuiNe Kite Team - Kđ5</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma30.jpg"></div>
+                                <div class="slide"><img src="./images/ma301.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 570.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 30 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
