--- a/index.html
+++ b/index.html
@@ -233,6 +233,44 @@
                     </div>
                 </li>
 
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma32.jpg"></div>
+                                <div class="slide"><img src="./images/ma321.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 32 - Đã SPC ID - Hall 9</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma33.jpg"></div>
+                                <div class="slide"><img src="./images/ma331.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 280.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 33 - Đã SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </div>
