--- a/index.html
+++ b/index.html
@@ -290,6 +290,82 @@
                     </div>
                 </li>
 
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma35.jpg"></div>
+                                <div class="slide"><img src="./images/ma351.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 650.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 35 - Đã SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma36.jpg"></div>
+                                <div class="slide"><img src="./images/ma361.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 750.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 36 - Đã SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma37.jpg"></div>
+                                <div class="slide"><img src="./images/ma371.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 600.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 37 - Đã SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma38.jpg"></div>
+                                <div class="slide"><img src="./images/ma381.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 160.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 38 - Đã SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </div>
