--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
         <div id="devil">
             <ul class="products">
+                <!-- Mã #16 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -60,11 +61,11 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 750.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 16 - Đã SPC ID - Hall 13</div>
+                            <div class="product-price">Mã #16 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #13 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -76,17 +77,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 13 - Đã SPC ID - Hall 15</div>
+                            <div class="product-price">Mã #13 - Đã SPC ID - Hall 15</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #15 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma15.jpg"></div>
                                 <div class="slide"><img src="./images/ma151.jpg"></div>
@@ -95,17 +93,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 350.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 15 - Hội: Level 11 - HoaMy - Kđ5</div>
+                            <div class="product-price">Mã #15 - Hội: Level 11 - HoaMy - Kđ5</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #20 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma20.jpg"></div>
                                 <div class="slide"><img src="./images/ma201.jpg"></div>
@@ -114,17 +109,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 20 - Hội: Level 7 - Bắc Ninh War - Kđ5</div>
+                            <div class="product-price">Mã #20 - Hội: Level 7 - Bắc Ninh War - Kđ5</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #21 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma21.jpg"></div>
                                 <div class="slide"><img src="./images/ma211.jpg"></div>
@@ -133,17 +125,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 600.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 21 - Đã SPC ID - Hall 13</div>
+                            <div class="product-price">Mã #21 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #23 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma23.jpg"></div>
                                 <div class="slide"><img src="./images/ma231.jpg"></div>
@@ -152,17 +141,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 700.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 23 - Đã SPC ID - Hall 12</div>
+                            <div class="product-price">Mã #23 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #26 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma26.jpg"></div>
                                 <div class="slide"><img src="./images/ma261.jpg"></div>
@@ -171,17 +157,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 26 - Hội: Level 6 - tao BẤT BẠI - Kđ5</div>
+                            <div class="product-price">Mã #26 - Hội: Level 6 - tao BẤT BẠI - Kđ5</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #28 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma28.jpg"></div>
                                 <div class="slide"><img src="./images/ma281.jpg"></div>
@@ -190,17 +173,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 28 - Đã SPC ID - Hall 9</div>
+                            <div class="product-price">Mã #28 - Đã SPC ID - Hall 9</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #29 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma29.jpg"></div>
                                 <div class="slide"><img src="./images/ma291.jpg"></div>
@@ -208,18 +188,15 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.000.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 29 - Hội: Level 21 - MuiNe Kite Team - Kđ5</div>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 850.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #29 - Hội: Level 21 - MuiNe Kite Team - Kđ5</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #30 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma30.jpg"></div>
                                 <div class="slide"><img src="./images/ma301.jpg"></div>
@@ -228,17 +205,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 570.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 30 - Đã SPC ID - Hall 12</div>
+                            <div class="product-price">Mã #30 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #32 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma32.jpg"></div>
                                 <div class="slide"><img src="./images/ma321.jpg"></div>
@@ -247,17 +221,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 32 - Đã SPC ID - Hall 9</div>
+                            <div class="product-price">Mã #32 - Đã SPC ID - Hall 9</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #33 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma33.jpg"></div>
                                 <div class="slide"><img src="./images/ma331.jpg"></div>
@@ -266,17 +237,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 280.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 33 - Đã SPC ID - Hall 11</div>
+                            <div class="product-price">Mã #33 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #34 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma34.jpg"></div>
                                 <div class="slide"><img src="./images/ma341.jpg"></div>
@@ -285,17 +253,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 250.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 34 - Đã SPC ID - Hall 12</div>
+                            <div class="product-price">Mã #34 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #35 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma35.jpg"></div>
                                 <div class="slide"><img src="./images/ma351.jpg"></div>
@@ -304,17 +269,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 650.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 35 - Đã SPC ID - Hall 12</div>
+                            <div class="product-price">Mã #35 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #36 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma36.jpg"></div>
                                 <div class="slide"><img src="./images/ma361.jpg"></div>
@@ -323,17 +285,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 750.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 36 - Đã SPC ID - Hall 12</div>
+                            <div class="product-price">Mã #36 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #37 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma37.jpg"></div>
                                 <div class="slide"><img src="./images/ma371.jpg"></div>
@@ -342,17 +301,14 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 600.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 37 - Đã SPC ID - Hall 13</div>
+                            <div class="product-price">Mã #37 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
                 </li>
-
+                <!-- Mã #38 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma38.jpg"></div>
                                 <div class="slide"><img src="./images/ma381.jpg"></div>
@@ -361,7 +317,23 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 160.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 38 - Đã SPC ID - Hall 11</div>
+                            <div class="product-price">Mã #38 - Đã SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #39 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma39.jpg"></div>
+                                <div class="slide"><img src="./images/ma391.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 400.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #39 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
                 </li>
