--- a/index.html
+++ b/index.html
@@ -257,6 +257,22 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #47 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma47.jpg"></div>
+                                <div class="slide"><img src="./images/ma471.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #47 - Đã SPC ID - Hall 10</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
