--- a/index.html
+++ b/index.html
@@ -273,6 +273,22 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #48 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma48.jpg"></div>
+                                <div class="slide"><img src="./images/ma481.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 650.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #48 - Đã SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
