--- a/index.html
+++ b/index.html
@@ -241,6 +241,22 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #50 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma50.jpg"></div>
+                                <div class="slide"><img src="./images/ma501.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 450.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #50 - Hội: Level 13 - VOZER VIETNAM - Kđ7</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
